--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "bootswatch": "^5.3.3",
     "drudgereport": "^1.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
