--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.14.0",
+    "@types/express": "^4.17.21",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "msw": "^0.39.2",
