--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "axios": "^0.27.2",
     "bootswatch": "^5.3.3",
     "drudgereport": "^1.1.2",
-    "formik": "^2.4.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "msw": "^0.39.2",
