--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootswatch": "^5.3.3",
     "drudgereport": "^1.1.2",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.23.1",
