--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.31",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.1.1",
     "bootswatch": "^5.3.3",
     "drudgereport": "^1.1.2",
+    "emoji-mart": "^5.6.0",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.23.1",
