--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.31",
     "@types/passport": "^1.0.16",
-    "@types/passport-jwt": "^4.0.1",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
@@ -32,6 +31,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.26.4",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/passport-jwt": "^4.0.1",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
