--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.31",
     "@types/passport": "^1.0.16",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bootswatch": "^5.3.3",
     "drudgereport": "^1.1.2",
     "emoji-mart": "^5.6.0",
@@ -30,7 +31,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tooltip": "^5.26.4",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.6.3",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/passport-jwt": "^4.0.1",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
