--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/jest": "^27.4.1",
     "@types/node": "^16.11.31",
     "@types/passport": "^1.0.16",
     "@types/react": "^18.0.8",
@@ -62,14 +61,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.7",
     "@testing-library/dom": "^10.3.1",
     "@testing-library/react": "^16.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.12",
     "@types/passport-jwt": "^4.0.1",
-    "eslint": "^8.14.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.7.0",
     "msw": "^0.39.2",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.2.0"
   }
 }
